NinjectRegistartions -> MVC; added bindings; layout changed; remove unused controller methods

--- a/Project/ItNews.Business/ItNews.Business.csproj
+++ b/Project/ItNews.Business/ItNews.Business.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Entities\IEntity.cs" />
     <Compile Include="Managers\Manager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Providers\IArticleProvider.cs" />
     <Compile Include="Providers\IProvider.cs" />
   </ItemGroup>
   <ItemGroup>
