--- a/Project/ItNews/Web.config
+++ b/Project/ItNews/Web.config
@@ -5,7 +5,9 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="DbConnection" connectionString="..." />
+    <add name="DbConnection"
+    providerName="System.Data.SqlClient"
+    connectionString="Data Source=.\Dimas;Initial Catalog=ItNews;Integrated Security=True;MultipleActiveResultSets=True"/>
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
