--- a/Project/ItNews.Nhibernate/ItNews.Nhibernate.csproj
+++ b/Project/ItNews.Nhibernate/ItNews.Nhibernate.csproj
@@ -99,6 +99,7 @@
     <Compile Include="NhibernateConfiguration.cs" />
     <Compile Include="Mappings\AppUserMap.cs" />
     <Compile Include="Mappings\ArticleMap.cs" />
+    <Compile Include="Providers\ArticleProvider.cs" />
     <Compile Include="SessionManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\NhibernateProvider.cs" />
