rename some classes in nhib assembly; fix mapping relationships bug; alpha version of newsListPage

--- a/Project/ItNews/Views/Web.config
+++ b/Project/ItNews/Views/Web.config
@@ -18,6 +18,8 @@
         <add namespace="System.Web.Optimization"/>
         <add namespace="System.Web.Routing" />
         <add namespace="ItNews" />
+        <add namespace="ItNews.Mvc.ViewModels" />
+        <add namespace="ItNews.Mvc.ViewModels.News" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
