--- a/Project/ItNews.Business/ItNews.Business.csproj
+++ b/Project/ItNews.Business/ItNews.Business.csproj
@@ -49,8 +49,12 @@
     <Compile Include="Entities\AppUser.cs" />
     <Compile Include="Entities\Article.cs" />
     <Compile Include="Entities\IEntity.cs" />
+    <Compile Include="IUnitOfWork.cs" />
+    <Compile Include="Managers\AppUserManager.cs" />
+    <Compile Include="Managers\ArticleManager.cs" />
     <Compile Include="Managers\Manager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Providers\IAppUserProvider.cs" />
     <Compile Include="Providers\IArticleProvider.cs" />
     <Compile Include="Providers\IProvider.cs" />
   </ItemGroup>
