--- a/Project/ItNews.Nhibernate/ItNews.Nhibernate.csproj
+++ b/Project/ItNews.Nhibernate/ItNews.Nhibernate.csproj
@@ -96,13 +96,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="NhibernateConfiguration.cs" />
+    <Compile Include="Configuration.cs" />
     <Compile Include="Mappings\AppUserMap.cs" />
     <Compile Include="Mappings\ArticleMap.cs" />
+    <Compile Include="Providers\AppUserProvider.cs" />
     <Compile Include="Providers\ArticleProvider.cs" />
     <Compile Include="SessionManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Providers\NhibernateProvider.cs" />
+    <Compile Include="Providers\Provider.cs" />
     <Compile Include="UnitOfWork.cs" />
   </ItemGroup>
   <ItemGroup>
