--- a/Project/ItNews/Web.config
+++ b/Project/ItNews/Web.config
@@ -10,6 +10,7 @@
     connectionString="Data Source=.\Dimas;Initial Catalog=ItNews;Integrated Security=True;MultipleActiveResultSets=True"/>
   </connectionStrings>
   <appSettings>
+    <add key="NewsListItemsOnPageCount" value="20" />
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
