--- a/Project/ItNews/Web.config
+++ b/Project/ItNews/Web.config
@@ -7,6 +7,10 @@
   <connectionStrings>
     <add name="DbConnection"
     providerName="System.Data.SqlClient"
+    connectionString="Data Source=SQL6003.site4now.net;Initial Catalog=DB_A30ACB_itnews;User Id=DB_A30ACB_itnews_admin;Password=prodigy123567;"/>
+
+    <add name="DbConnectionDimas"
+    providerName="System.Data.SqlClient"
     connectionString="Data Source=.\Dimas;Initial Catalog=ItNews;Integrated Security=True;MultipleActiveResultSets=True"/>
   </connectionStrings>
   <appSettings>
