--- a/Project/ItNews/Web.config
+++ b/Project/ItNews/Web.config
@@ -5,13 +5,9 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="DbConnection"
-    providerName="System.Data.SqlClient"
-    connectionString="Data Source=SQL6003.site4now.net;Initial Catalog=DB_A30ACB_itnews;User Id=DB_A30ACB_itnews_admin;Password=prodigy123567;"/>
+    <add name="DbConnection" providerName="System.Data.SqlClient" connectionString="Data Source=SQL6003.site4now.net;Initial Catalog=DB_A30ACB_itnews;User Id=DB_A30ACB_itnews_admin;Password=prodigy123567;" />
 
-    <add name="DbConnectionDimas"
-    providerName="System.Data.SqlClient"
-    connectionString="Data Source=.\Dimas;Initial Catalog=ItNews;Integrated Security=True;MultipleActiveResultSets=True"/>
+    <add name="DbConnectionDimas" providerName="System.Data.SqlClient" connectionString="Data Source=.\Dimas;Initial Catalog=ItNews;Integrated Security=True;MultipleActiveResultSets=True" />
   </connectionStrings>
   <appSettings>
     <add key="ArticleTextPreviewLength" value="25" />
