--- a/Project/ItNews.Nhibernate/ItNews.Nhibernate.csproj
+++ b/Project/ItNews.Nhibernate/ItNews.Nhibernate.csproj
@@ -105,6 +105,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\Provider.cs" />
     <Compile Include="UnitOfWork.cs" />
+    <Compile Include="UnitOfWorkFactory.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ItNews.Business\ItNews.Business.csproj">
