--- a/Project/ItNews.MVC/ItNews.Mvc.csproj
+++ b/Project/ItNews.MVC/ItNews.Mvc.csproj
@@ -46,6 +46,7 @@
       <HintPath>..\packages\Ninject.MVC5.3.3.0\lib\net45\Ninject.Web.Mvc.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Web" />
@@ -82,6 +83,7 @@
     <Compile Include="ViewModels\News\ArticlesList.cs" />
     <Compile Include="ViewModels\News\ArticleDetailsViewModel.cs" />
     <Compile Include="ViewModels\News\ArticlesListPageItem.cs" />
+    <Compile Include="ViewModels\News\CreateViewModel.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
