--- a/Project/ItNews/Web.config
+++ b/Project/ItNews/Web.config
@@ -12,6 +12,7 @@
   <appSettings>
     <add key="ArticleTextPreviewLength" value="25" />
     <add key="NewsListItemsOnPageCount" value="5" />
+    <add key="ImagesFolder" value="~/Content/Images" />
     <add key="DefaultRoutesNamespace" value="ItNews.Mvc.Controllers" />
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
