--- a/Project/ItNews/Web.config
+++ b/Project/ItNews/Web.config
@@ -11,12 +11,17 @@
   </connectionStrings>
   <appSettings>
     <add key="ArticleTextPreviewLength" value="25" />
+    
+    <add key="IdentityValidateInterval" value ="30"/>
+    <add key="IdentityLoginPath" value="/Account/Login"/>
+    
     <add key="NewsListItemsOnPageCount" value="5" />
     <add key="DefaultRoutesNamespace" value="ItNews.Mvc.Controllers" />
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
-    <add key="ClientValidationEnabled" value="true" />
-    <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="ClientValidationEnabled" value="false" />
+    <add key="UnobtrusiveJavaScriptEnabled" value="false" />
+    <add key="owin:AutomaticAppStartup" value="true" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
@@ -62,6 +67,10 @@
       <dependentAssembly>
         <assemblyIdentity name="NHibernate" publicKeyToken="aa95f207798dfdb4" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-5.0.0.0" newVersion="5.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.1.0.0" newVersion="3.1.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
