--- a/Project/ItNews.Nhibernate/ItNews.Nhibernate.csproj
+++ b/Project/ItNews.Nhibernate/ItNews.Nhibernate.csproj
@@ -103,6 +103,7 @@
     <Compile Include="Providers\ArticleProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\Provider.cs" />
+    <Compile Include="SessionManager.cs" />
     <Compile Include="UnitOfWork.cs" />
     <Compile Include="UnitOfWorkFactory.cs" />
   </ItemGroup>
