--- a/Project/ItNews.MVC/packages.config
+++ b/Project/ItNews.MVC/packages.config
@@ -8,4 +8,5 @@
   <package id="Ninject.MVC5" version="3.3.0" targetFramework="net461" />
   <package id="Ninject.Web.Common" version="3.3.0" targetFramework="net461" />
   <package id="Ninject.Web.Common.WebHost" version="3.3.0" targetFramework="net461" />
+  <package id="Remotion.Linq" version="2.1.2" targetFramework="net461" />
 </packages>
