--- a/Project/ItNews/packages.config
+++ b/Project/ItNews/packages.config
@@ -31,6 +31,7 @@
   <package id="Ninject.MVC5" version="3.3.0" targetFramework="net461" />
   <package id="Ninject.Web.Common" version="3.3.0" targetFramework="net461" />
   <package id="Ninject.Web.Common.WebHost" version="3.3.0" targetFramework="net461" />
+  <package id="Remotion.Linq" version="2.1.2" targetFramework="net461" />
   <package id="Respond" version="1.2.0" targetFramework="net461" />
   <package id="WebGrease" version="1.5.2" targetFramework="net461" />
 </packages>
