--- a/Project/ItNews.Nhibernate/packages.config
+++ b/Project/ItNews.Nhibernate/packages.config
@@ -3,6 +3,7 @@
   <package id="Antlr3.Runtime" version="3.5.1" targetFramework="net461" />
   <package id="FluentNHibernate" version="2.0.3.0" targetFramework="net461" />
   <package id="Iesi.Collections" version="4.0.2" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net461" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net461" />
