add link to Article; rename viewmodels

--- a/Project/ItNews/Views/Web.config
+++ b/Project/ItNews/Views/Web.config
@@ -19,7 +19,8 @@
         <add namespace="System.Web.Routing" />
         <add namespace="ItNews" />
         <add namespace="ItNews.Mvc.ViewModels" />
-        <add namespace="ItNews.Mvc.ViewModels.News" />
+        <add namespace="ItNews.Mvc.ViewModels.Article" />
+        <add namespace="ItNews.Mvc.ViewModels.Account" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
