--- a/Project/ItNews.MVC/packages.config
+++ b/Project/ItNews.MVC/packages.config
@@ -19,4 +19,8 @@
   <package id="Ninject.Web.Common" version="3.3.0" targetFramework="net461" />
   <package id="Ninject.Web.Common.WebHost" version="3.3.0" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
+  <package id="Unity.Abstractions" version="3.1.0" targetFramework="net461" />
+  <package id="Unity.Container" version="5.5.1" targetFramework="net461" />
+  <package id="Unity.Mvc" version="5.0.12" targetFramework="net461" />
+  <package id="WebActivatorEx" version="2.2.0" targetFramework="net461" />
 </packages>
