Fix details page, add create article method

--- a/Project/ItNews.MVC/ItNews.Mvc.csproj
+++ b/Project/ItNews.MVC/ItNews.Mvc.csproj
@@ -139,6 +139,7 @@
     <Compile Include="ViewModels\Article\ArticlesListViewModel.cs" />
     <Compile Include="ViewModels\Article\ArticlesListPageItem.cs" />
     <Compile Include="ViewModels\Article\ArticleDetailsViewModel.cs" />
+    <Compile Include="ViewModels\Article\CreateViewModel.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
