--- a/Project/ItNews/Web.config
+++ b/Project/ItNews/Web.config
@@ -11,12 +11,14 @@
   </connectionStrings>
   <appSettings>
     <add key="ArticleTextPreviewLength" value="25" />
+    <add key="ImagesFolder" value="~\Content\Images" />
+    <add key="NewsListItemsOnPageDefaultCount" value="5" />
+
     <add key="IdentityValidateInterval" value="30" />
     <add key="IdentityLoginPath" value="/Account/Login" />
     
-    <add key="NewsListItemsOnPageCount" value="5" />
-    <add key="ImagesFolder" value="~/Content/Images" />
     <add key="DefaultRoutesNamespace" value="ItNews.Mvc.Controllers" />
+    
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="false" />
