NInject replaced with Unity

--- a/Project/ItNews.Business/packages.config
+++ b/Project/ItNews.Business/packages.config
@@ -11,4 +11,6 @@
   <package id="Ninject" version="3.3.4" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="Remotion.Linq" version="2.1.2" targetFramework="net461" />
+  <package id="Unity" version="5.5.4" targetFramework="net461" />
+  <package id="Unity.Abstractions" version="3.1.0" targetFramework="net461" />
 </packages>
