--- a/Project/ItNews/ItNews.Web.csproj
+++ b/Project/ItNews/ItNews.Web.csproj
@@ -195,11 +195,10 @@
   <ItemGroup>
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
-    <Compile Include="App_Start\NinjectRegistrations.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\StartupAuthentication.cs" />
-    <Compile Include="App_Start\UnityConfig.cs" />
-    <Compile Include="App_Start\UnityMvcActivator.cs" />
+    <Compile Include="App_Start\DependencyInjection\UnityRegistrations.cs" />
+    <Compile Include="App_Start\DependencyInjection\UnityConfiguration.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
