--- a/Project/ItNews/Web.config
+++ b/Project/ItNews/Web.config
@@ -16,14 +16,15 @@
 
     <add key="IdentityValidateInterval" value="30" />
     <add key="IdentityLoginPath" value="/Account/Login" />
+    <add key="owin:AutomaticAppStartup" value="true" />
     
     <add key="DefaultRoutesNamespace" value="ItNews.Mvc.Controllers" />
     
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
-    <add key="ClientValidationEnabled" value="false" />
-    <add key="UnobtrusiveJavaScriptEnabled" value="false" />
-    <add key="owin:AutomaticAppStartup" value="true" />
+    
+    <add key="ClientValidationEnabled" value="true" />
+    <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
