edit button enabled only if user is author

--- a/Project/ItNews/Web.config
+++ b/Project/ItNews/Web.config
@@ -11,6 +11,7 @@
   </connectionStrings>
   <appSettings>
     <add key="ArticleTextPreviewLength" value="25" />
+    <add key="ArticleTextPreviewEnding" value="..." />
     <add key="ImagesFolder" value="~\Content\Images" />
     <add key="NewsListItemsOnPageDefaultCount" value="5" />
 
