--- a/Project/ItNews.Business/ItNews.Business.csproj
+++ b/Project/ItNews.Business/ItNews.Business.csproj
@@ -58,14 +58,17 @@
   <ItemGroup>
     <Compile Include="Entities\AppUser.cs" />
     <Compile Include="Entities\Article.cs" />
+    <Compile Include="Entities\Comment.cs" />
     <Compile Include="Entities\IEntity.cs" />
     <Compile Include="IUnitOfWork.cs" />
     <Compile Include="IUnitOfWorkFactory.cs" />
     <Compile Include="Managers\AppUserManager.cs" />
     <Compile Include="Managers\ArticleManager.cs" />
+    <Compile Include="Managers\CommentManager.cs" />
     <Compile Include="Managers\Manager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\IArticleProvider.cs" />
+    <Compile Include="Providers\ICommentProvider.cs" />
     <Compile Include="Providers\IUserProvider.cs" />
     <Compile Include="Providers\IProvider.cs" />
   </ItemGroup>
