--- a/Project/ItNews.MVC/ItNews.Mvc.csproj
+++ b/Project/ItNews.MVC/ItNews.Mvc.csproj
@@ -106,6 +106,7 @@
     <Compile Include="Identity\Mangers\IdentitySignInManager.cs" />
     <Compile Include="Identity\Mangers\IdentityUserManager.cs" />
     <Compile Include="Identity\Stores\IdentityUserStore.cs" />
+    <Compile Include="ModelBinders\PageNumberModelBinder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\Account\LoginViewModel.cs" />
     <Compile Include="ViewModels\Account\RegisterViewModel.cs" />
