--- a/Project/ItNews.Nhibernate/ItNews.Nhibernate.csproj
+++ b/Project/ItNews.Nhibernate/ItNews.Nhibernate.csproj
@@ -117,7 +117,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\UserProvider.cs" />
     <Compile Include="Providers\Provider.cs" />
-    <Compile Include="SessionManager.cs" />
+    <Compile Include="SessionContainer.cs" />
+    <Compile Include="SessionContainerFactory.cs" />
+    <Compile Include="TransactionContainer.cs" />
     <Compile Include="UnitOfWork.cs" />
     <Compile Include="UnitOfWorkFactory.cs" />
   </ItemGroup>
