--- a/Project/ItNews.MVC/ItNews.Mvc.csproj
+++ b/Project/ItNews.MVC/ItNews.Mvc.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{11E27AF2-93F2-47BE-9C71-47BC9504B01A}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ItNews.MVC</RootNamespace>
+    <RootNamespace>ItNews.Mvc</RootNamespace>
     <AssemblyName>ItNews.MVC</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -106,7 +106,8 @@
     <Compile Include="Identity\Mangers\IdentitySignInManager.cs" />
     <Compile Include="Identity\Mangers\IdentityUserManager.cs" />
     <Compile Include="Identity\Stores\IdentityUserStore.cs" />
-    <Compile Include="ModelBinders\PageNumberModelBinder.cs" />
+    <Compile Include="ModelBinders\Article\ItemsOnPageCountModelBinder.cs" />
+    <Compile Include="ModelBinders\Article\PageNumberModelBinder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\Account\LoginViewModel.cs" />
     <Compile Include="ViewModels\Account\RegisterViewModel.cs" />
