--- a/Project/ItNews/Views/Web.config
+++ b/Project/ItNews/Views/Web.config
@@ -18,6 +18,7 @@
         <add namespace="System.Web.Optimization"/>
         <add namespace="System.Web.Routing" />
         <add namespace="ItNews" />
+        <add namespace="ItNews.Mvc.HtmlHelpers" />
         <add namespace="ItNews.Mvc.ViewModels" />
         <add namespace="ItNews.Mvc.ViewModels.Article" />
         <add namespace="ItNews.Mvc.ViewModels.Account" />
