--- a/Project/ItNews.MVC/ItNews.Mvc.csproj
+++ b/Project/ItNews.MVC/ItNews.Mvc.csproj
@@ -113,6 +113,7 @@
     <Compile Include="ViewModels\Article\ArticlesListPageItem.cs" />
     <Compile Include="ViewModels\Article\ArticleDetailsViewModel.cs" />
     <Compile Include="ViewModels\Article\CommentViewModel.cs" />
+    <Compile Include="ViewModels\Article\CreateCommentViewModel.cs" />
     <Compile Include="ViewModels\Article\CreateViewModel.cs" />
     <Compile Include="ViewModels\Article\EditViewModel.cs" />
   </ItemGroup>
