--- a/Project/ItNews/ItNews.Web.csproj
+++ b/Project/ItNews/ItNews.Web.csproj
@@ -193,6 +193,7 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <None Include="Views\Article\CreateCommentPartial.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
