--- a/Project/ItNews.MVC/ItNews.Mvc.csproj
+++ b/Project/ItNews.MVC/ItNews.Mvc.csproj
@@ -101,6 +101,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\AdminPanelController.cs" />
     <Compile Include="Controllers\ArticleController.cs" />
     <Compile Include="CustomValidationAttributes\FileTypeAttribute.cs" />
     <Compile Include="HtmlHelpers\HtmlAttributesExtensions.cs" />
@@ -113,6 +114,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\Account\LoginViewModel.cs" />
     <Compile Include="ViewModels\Account\RegisterViewModel.cs" />
+    <Compile Include="ViewModels\AdminPanel\PanelViewModel.cs" />
     <Compile Include="ViewModels\Article\DeleteViewModel.cs" />
     <Compile Include="ViewModels\Article\ArticlesListViewModel.cs" />
     <Compile Include="ViewModels\Article\ArticlesListPageItem.cs" />
