--- a/Project/ItNews/ItNews.Web.csproj
+++ b/Project/ItNews/ItNews.Web.csproj
@@ -194,6 +194,7 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Content Include="Views\AdminPanel\Panel.cshtml" />
     <None Include="Views\Article\CreateCommentPartial.cshtml" />
   </ItemGroup>
   <ItemGroup>
