--- a/Project/ItNews/Web.config
+++ b/Project/ItNews/Web.config
@@ -18,12 +18,12 @@
     <add key="IdentityValidateInterval" value="30" />
     <add key="IdentityLoginPath" value="/Account/Login" />
     <add key="owin:AutomaticAppStartup" value="true" />
-    
+
     <add key="DefaultRoutesNamespace" value="ItNews.Mvc.Controllers" />
-    
+
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
-    
+
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
@@ -34,6 +34,13 @@
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
   </system.web>
+  <system.webServer>
+    <httpErrors errorMode="Custom" existingResponse="Replace">
+      <clear/>
+      <error statusCode="404" path="/Error/NotFound" responseMode="ExecuteURL"/>
+      <error statusCode="403" path="/Error/Forbidden" responseMode="ExecuteURL"/>
+    </httpErrors>
+  </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
