--- a/Project/ItNews.MVC/ItNews.Mvc.csproj
+++ b/Project/ItNews.MVC/ItNews.Mvc.csproj
@@ -100,9 +100,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Attributes\PageNumberAttribute.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\ArticleController.cs" />
-    <Compile Include="CustomValidationAttributes\FileTypeAttribute.cs" />
+    <Compile Include="Attributes\Validation\FileTypeAttribute.cs" />
     <Compile Include="HtmlHelpers\HtmlAttributesExtensions.cs" />
     <Compile Include="Identity\IdentityUser.cs" />
     <Compile Include="Identity\Mangers\IdentitySignInManager.cs" />
@@ -113,11 +114,11 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\Account\LoginViewModel.cs" />
     <Compile Include="ViewModels\Account\RegisterViewModel.cs" />
+    <Compile Include="ViewModels\Article\CommentViewModel.cs" />
     <Compile Include="ViewModels\Article\DeleteViewModel.cs" />
     <Compile Include="ViewModels\Article\ArticlesListViewModel.cs" />
     <Compile Include="ViewModels\Article\ArticlesListPageItem.cs" />
     <Compile Include="ViewModels\Article\ArticleDetailsViewModel.cs" />
-    <Compile Include="ViewModels\Article\CommentViewModel.cs" />
     <Compile Include="ViewModels\Article\CreateCommentViewModel.cs" />
     <Compile Include="ViewModels\Article\CreateViewModel.cs" />
     <Compile Include="ViewModels\Article\EditViewModel.cs" />
