--- a/Project/ItNews.MVC/ItNews.Mvc.csproj
+++ b/Project/ItNews.MVC/ItNews.Mvc.csproj
@@ -101,12 +101,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Attributes\PageNumberAttribute.cs" />
+    <Compile Include="Attributes\Validation\FileTypeAttribute.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\AdminPanelController.cs" />
     <Compile Include="Controllers\ArticleController.cs" />
     <Compile Include="Controllers\ErrorController.cs" />
-    <Compile Include="CustomValidationAttributes\FileTypeAttribute.cs" />
-    <Compile Include="Attributes\Validation\FileTypeAttribute.cs" />
     <Compile Include="HtmlHelpers\HtmlAttributesExtensions.cs" />
     <Compile Include="Identity\IdentityUser.cs" />
     <Compile Include="Identity\Mangers\IdentitySignInManager.cs" />
@@ -115,6 +114,7 @@
     <Compile Include="ModelBinders\Article\ItemsOnPageCountModelBinder.cs" />
     <Compile Include="ModelBinders\Article\PageNumberModelBinder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RequestDataStorage.cs" />
     <Compile Include="ViewModels\Account\LoginViewModel.cs" />
     <Compile Include="ViewModels\Account\RegisterViewModel.cs" />
     <Compile Include="ViewModels\AdminPanel\PanelViewModel.cs" />
