--- a/Project/ItNews/Web.config
+++ b/Project/ItNews/Web.config
@@ -34,13 +34,13 @@
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
   </system.web>
-  <system.webServer>
+  <!--<system.webServer>
     <httpErrors errorMode="Custom" existingResponse="Replace">
       <clear/>
       <error statusCode="404" path="/Error/NotFound" responseMode="ExecuteURL"/>
       <error statusCode="403" path="/Error/Forbidden" responseMode="ExecuteURL"/>
     </httpErrors>
-  </system.webServer>
+  </system.webServer>-->
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
