--- a/Project/ItNews.Business/ItNews.Business.csproj
+++ b/Project/ItNews.Business/ItNews.Business.csproj
@@ -46,6 +46,7 @@
       <HintPath>..\packages\Remotion.Linq.2.1.2\lib\net45\Remotion.Linq.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Caching" />
     <Reference Include="System.Runtime.Serialization" />
@@ -62,6 +63,7 @@
     <Compile Include="Entities\Article.cs" />
     <Compile Include="Entities\Comment.cs" />
     <Compile Include="Entities\IEntity.cs" />
+    <Compile Include="IDependencyResolver.cs" />
     <Compile Include="IUnitOfWork.cs" />
     <Compile Include="Managers\AppUserManager.cs" />
     <Compile Include="Managers\ArticleManager.cs" />
@@ -72,6 +74,8 @@
     <Compile Include="Providers\ICommentProvider.cs" />
     <Compile Include="Providers\IUserProvider.cs" />
     <Compile Include="Providers\IProvider.cs" />
+    <Compile Include="RequestDataStorage.cs" />
+    <Compile Include="ServerVariables.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
