--- a/Project/ItNews.MVC/ItNews.Mvc.csproj
+++ b/Project/ItNews.MVC/ItNews.Mvc.csproj
@@ -105,6 +105,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\AdminPanelController.cs" />
     <Compile Include="Controllers\ArticleController.cs" />
+    <Compile Include="Controllers\ConfigurationController.cs" />
     <Compile Include="Controllers\ErrorController.cs" />
     <Compile Include="HtmlHelpers\HtmlAttributesExtensions.cs" />
     <Compile Include="Identity\IdentityUser.cs" />
@@ -114,7 +115,6 @@
     <Compile Include="ModelBinders\Article\ItemsOnPageCountModelBinder.cs" />
     <Compile Include="ModelBinders\Article\PageNumberModelBinder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RequestDataStorage.cs" />
     <Compile Include="ViewModels\Account\LoginViewModel.cs" />
     <Compile Include="ViewModels\Account\RegisterViewModel.cs" />
     <Compile Include="ViewModels\AdminPanel\PanelViewModel.cs" />
