--- a/Project/ItNews.Business/ItNews.Business.csproj
+++ b/Project/ItNews.Business/ItNews.Business.csproj
@@ -74,8 +74,7 @@
     <Compile Include="Providers\ICommentProvider.cs" />
     <Compile Include="Providers\IUserProvider.cs" />
     <Compile Include="Providers\IProvider.cs" />
-    <Compile Include="RequestDataStorage.cs" />
-    <Compile Include="ServerVariables.cs" />
+    <Compile Include="ApplicationVariables.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
