--- a/Project/ItNews/Web.config
+++ b/Project/ItNews/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="DbConnection" providerName="System.Data.SqlClient" connectionString="Data Source=SQL6003.site4now.net;Initial Catalog=DB_A30ACB_itnews;User Id=DB_A30ACB_itnews_admin;Password=prodigy123567;MultipleActiveResultSets=true;" />
+    <add name="DbConnection" providerName="System.Data.SqlClient" connectionString="Data Source=SQL6003.site4now.net;Initial Catalog=DB_A30ACB_itnews;User Id=DB_A30ACB_itnews_admin;Password=prodigy123567;MultipleActiveResultSets=True" />
 
     <add name="DbConnectionDimas" providerName="System.Data.SqlClient" connectionString="Data Source=.\Dimas;Initial Catalog=ItNews;Integrated Security=True;MultipleActiveResultSets=True" />
   </connectionStrings>
@@ -27,7 +27,7 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     
-    <add key="MemoryProviderFolder" value="C:\" />
+    <add key="MemoryProviderFolder" value="App_Data" />
     
     <add key="DefaultProviderType" value="DB" />
   </appSettings>
