add comment validation

--- a/Project/ItNews/Web.config
+++ b/Project/ItNews/Web.config
@@ -32,12 +32,19 @@
     <add key="DefaultProviderType" value="DB" />
   </appSettings>
   <system.web>
+    <customErrors mode="Off"/>
+    
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
   </system.web>
+
+ 
+  <system.webServer>
+    <httpErrors errorMode="Detailed" />
+  </system.webServer>
   <!--<system.webServer>
     <httpErrors errorMode="Custom" existingResponse="Replace">
       <clear/>
