--- a/Project/ItNews/Web.config
+++ b/Project/ItNews/Web.config
@@ -30,6 +30,7 @@
     <add key="MemoryProviderFolder" value="App_Data" />
     
     <add key="DefaultProviderType" value="DB" />
+    <add key="CacheDuration" value="30" />
   </appSettings>
   <system.web>
     <customErrors mode="Off"/>
