--- a/Project/ItNews.Business/app.config
+++ b/Project/ItNews.Business/app.config
@@ -2,10 +2,10 @@
 <configuration>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-      <dependentAssembly>
+      <!--<dependentAssembly>
         <assemblyIdentity name="Unity.Abstractions" publicKeyToken="6d32ff45e0ccc69f" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-3.1.0.0" newVersion="3.1.0.0" />
-      </dependentAssembly>
+      </dependentAssembly>-->
     </assemblyBinding>
   </runtime>
 </configuration>
