--- a/Project/ItNews/Web.config
+++ b/Project/ItNews/Web.config
@@ -31,6 +31,8 @@
     
     <add key="DefaultProviderType" value="DB" />
     <add key="CacheDuration" value="30" />
+    
+    <add key="SearchProviderFolderName" value="Lucene" />
   </appSettings>
   <system.web>
     <customErrors mode="Off"/>
