--- a/Project/ItNews/ItNews.Web.csproj
+++ b/Project/ItNews/ItNews.Web.csproj
@@ -196,10 +196,12 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Content Include="Scripts\SearchField.js" />
     <Content Include="Views\AdminPanel\Panel.cshtml" />
     <None Include="Views\Article\CreateCommentPartial.cshtml" />
     <Content Include="Views\Error\NotFound.cshtml" />
     <Content Include="Views\Error\Forbidden.cshtml" />
+    <Content Include="Views\Article\SearchFieldPartial.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
@@ -290,6 +292,10 @@
     <ProjectReference Include="..\MemoryProvider\ItNews.FileProvider.csproj">
       <Project>{f071acfb-e1a0-41ad-aff9-032289f45bd2}</Project>
       <Name>ItNews.FileProvider</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SearchProvider\ItNews.SearchProvider.csproj">
+      <Project>{990CFF64-7DBB-4D98-B238-9C00C2BCACEC}</Project>
+      <Name>ItNews.SearchProvider</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
