--- a/Project/ItNews/ItNews.Web.csproj
+++ b/Project/ItNews/ItNews.Web.csproj
@@ -196,7 +196,8 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
-    <Content Include="Views\AdminPanel\Panel.cshtml" />
+    <Content Include="Views\UserPanel\Panel.cshtml" />
+    <Content Include="Views\Account\UserProfile.cshtml" />
     <None Include="Views\Article\CreateCommentPartial.cshtml" />
     <Content Include="Views\Error\NotFound.cshtml" />
     <Content Include="Views\Error\Forbidden.cshtml" />
